--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.1",
     "axios": "^0.21.1",
     "next": "latest",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
